src/redisearch_rs/numeric_range_tree/tests/integration/snapshots/integration__debug__debug_dump_index_with_splits.snap
---
source: numeric_range_tree/tests/integration/debug.rs
expression: reply
---
[
  [
    [
      "numDocs",
      61,
      "numEntries",
      61,
      "lastId",
      100,
      "flags",
      32,
      "numberOfBlocks",
      1,
      "blocks_efficiency (numEntries/numberOfBlocks)",
      61
    ],
    [
      40,
      41,
      42,
      43,
      44,
      45,
      46,
      47,
      48,
      49,
      50,
      51,
      52,
      53,
      54,
      55,
      56,
      57,
      58,
      59,
      60,
      61,
      62,
      63,
      64,
      65,
      66,
      67,
      68,
      69,
      70,
      71,
      72,
      73,
      74,
      75,
      76,
      77,
      78,
      79,
      80,
      81,
      82,
      83,
      84,
      85,
      86,
      87,
      88,
      89,
      90,
      91,
      92,
      93,
      94,
      95,
      96,
      97,
      98,
      99,
      100
    ]
  ],
  [
    [
      "numDocs",
      31,
      "numEntries",
      31,
      "lastId",
      39,
      "flags",
      32,
      "numberOfBlocks",
      1,
      "blocks_efficiency (numEntries/numberOfBlocks)",
      31
    ],
    [
      9,
      10,
      11,
      12,
      13,
      14,
      15,
      16,
      17,
      18,
      19,
      20,
      21,
      22,
      23,
      24,
      25,
      26,
      27,
      28,
      29,
      30,
      31,
      32,
      33,
      34,
      35,
      36,
      37,
      38,
      39
    ]
  ],
  [
    [
      "numDocs",
      8,
      "numEntries",
      8,
      "lastId",
      8,
      "flags",
      32,
      "numberOfBlocks",
      1,
      "blocks_efficiency (numEntries/numberOfBlocks)",
      8
    ],
    [1, 2, 3, 4, 5, 6, 7, 8]
  ]
]
