src/redisearch_rs/numeric_range_tree/tests/integration/snapshots/integration__debug__debug_dump_tree_with_children_compressed.snap
---
source: numeric_range_tree/tests/integration/debug.rs
expression: reply
---
{
  "numRanges": 3,
  "numEntries": 100,
  "lastDocId": 100,
  "revisionId": 2,
  "uniqueId": "[redacted]",
  "emptyLeaves": 0,
  "root": {
    "value": 8,
    "maxDepth": 2,
    "left": {
      "range": [
        "minVal",
        0,
        "maxVal",
        7,
        "invertedIndexSize [bytes]",
        113,
        "card",
        8,
        "entries",
        [
          "numDocs",
          8,
          "numEntries",
          8,
          "lastId",
          8,
          "size",
          1,
          "blocks_efficiency (numEntries/size)",
          8,
          "values",
          [
            "value",
            0,
            "docId",
            1,
            "value",
            1,
            "docId",
            2,
            "value",
            2,
            "docId",
            3,
            "value",
            3,
            "docId",
            4,
            "value",
            4,
            "docId",
            5,
            "value",
            5,
            "docId",
            6,
            "value",
            6,
            "docId",
            7,
            "value",
            7,
            "docId",
            8
          ]
        ]
      ]
    },
    "right": {
      "value": 43,
      "maxDepth": 1,
      "left": {
        "range": [
          "minVal",
          8,
          "maxVal",
          42,
          "invertedIndexSize [bytes]",
          217,
          "card",
          31,
          "entries",
          [
            "numDocs",
            35,
            "numEntries",
            35,
            "lastId",
            43,
            "size",
            1,
            "blocks_efficiency (numEntries/size)",
            35,
            "values",
            [
              "value",
              8,
              "docId",
              9,
              "value",
              9,
              "docId",
              10,
              "value",
              10,
              "docId",
              11,
              "value",
              11,
              "docId",
              12,
              "value",
              12,
              "docId",
              13,
              "value",
              13,
              "docId",
              14,
              "value",
              14,
              "docId",
              15,
              "value",
              15,
              "docId",
              16,
              "value",
              16,
              "docId",
              17,
              "value",
              17,
              "docId",
              18,
              "value",
              18,
              "docId",
              19,
              "value",
              19,
              "docId",
              20,
              "value",
              20,
              "docId",
              21,
              "value",
              21,
              "docId",
              22,
              "value",
              22,
              "docId",
              23,
              "value",
              23,
              "docId",
              24,
              "value",
              24,
              "docId",
              25,
              "value",
              25,
              "docId",
              26,
              "value",
              26,
              "docId",
              27,
              "value",
              27,
              "docId",
              28,
              "value",
              28,
              "docId",
              29,
              "value",
              29,
              "docId",
              30,
              "value",
              30,
              "docId",
              31,
              "value",
              31,
              "docId",
              32,
              "value",
              32,
              "docId",
              33,
              "value",
              33,
              "docId",
              34,
              "value",
              34,
              "docId",
              35,
              "value",
              35,
              "docId",
              36,
              "value",
              36,
              "docId",
              37,
              "value",
              37,
              "docId",
              38,
              "value",
              38,
              "docId",
              39,
              "value",
              39,
              "docId",
              40,
              "value",
              40,
              "docId",
              41,
              "value",
              41,
              "docId",
              42,
              "value",
              42,
              "docId",
              43
            ]
          ]
        ]
      },
      "right": {
        "range": [
          "minVal",
          43,
          "maxVal",
          99,
          "invertedIndexSize [bytes]",
          272,
          "card",
          62,
          "entries",
          [
            "numDocs",
            57,
            "numEntries",
            57,
            "lastId",
            100,
            "size",
            1,
            "blocks_efficiency (numEntries/size)",
            57,
            "values",
            [
              "value",
              43,
              "docId",
              44,
              "value",
              44,
              "docId",
              45,
              "value",
              45,
              "docId",
              46,
              "value",
              46,
              "docId",
              47,
              "value",
              47,
              "docId",
              48,
              "value",
              48,
              "docId",
              49,
              "value",
              49,
              "docId",
              50,
              "value",
              50,
              "docId",
              51,
              "value",
              51,
              "docId",
              52,
              "value",
              52,
              "docId",
              53,
              "value",
              53,
              "docId",
              54,
              "value",
              54,
              "docId",
              55,
              "value",
              55,
              "docId",
              56,
              "value",
              56,
              "docId",
              57,
              "value",
              57,
              "docId",
              58,
              "value",
              58,
              "docId",
              59,
              "value",
              59,
              "docId",
              60,
              "value",
              60,
              "docId",
              61,
              "value",
              61,
              "docId",
              62,
              "value",
              62,
              "docId",
              63,
              "value",
              63,
              "docId",
              64,
              "value",
              64,
              "docId",
              65,
              "value",
              65,
              "docId",
              66,
              "value",
              66,
              "docId",
              67,
              "value",
              67,
              "docId",
              68,
              "value",
              68,
              "docId",
              69,
              "value",
              69,
              "docId",
              70,
              "value",
              70,
              "docId",
              71,
              "value",
              71,
              "docId",
              72,
              "value",
              72,
              "docId",
              73,
              "value",
              73,
              "docId",
              74,
              "value",
              74,
              "docId",
              75,
              "value",
              75,
              "docId",
              76,
              "value",
              76,
              "docId",
              77,
              "value",
              77,
              "docId",
              78,
              "value",
              78,
              "docId",
              79,
              "value",
              79,
              "docId",
              80,
              "value",
              80,
              "docId",
              81,
              "value",
              81,
              "docId",
              82,
              "value",
              82,
              "docId",
              83,
              "value",
              83,
              "docId",
              84,
              "value",
              84,
              "docId",
              85,
              "value",
              85,
              "docId",
              86,
              "value",
              86,
              "docId",
              87,
              "value",
              87,
              "docId",
              88,
              "value",
              88,
              "docId",
              89,
              "value",
              89,
              "docId",
              90,
              "value",
              90,
              "docId",
              91,
              "value",
              91,
              "docId",
              92,
              "value",
              92,
              "docId",
              93,
              "value",
              93,
              "docId",
              94,
              "value",
              94,
              "docId",
              95,
              "value",
              95,
              "docId",
              96,
              "value",
              96,
              "docId",
              97,
              "value",
              97,
              "docId",
              98,
              "value",
              98,
              "docId",
              99,
              "value",
              99,
              "docId",
              100
            ]
          ]
        ]
      }
    }
  },
  "Tree stats": {
    "Average memory efficiency (numEntries/size)/numRanges": 33.333333333333336
  }
}
